@@ -111,11 +111,9 @@ is the default repository but the jars are also available from the @uref{http://
 central maven repository} and from @uref{http://sourceforge.net/projects/ormlite/files/, Sourceforge}.
 
 Users that are connecting to SQL databases via JDBC connections will need to download the @code{ormlite-jdbc-@value{ormlite_version}.jar}
-and @code{ormlite-core-@value{ormlite_version}.jar} files.  For use with Android applications, you should download the
-@code{ormlite-android-@value{ormlite_version}.jar} and @code{ormlite-core-@value{ormlite_version}.jar} files instead.  For either JDBC or
-Android you will also need the ormlite-core release which has the ORMLite backend implementations.  ORMLite does not have
-any required external dependencies although there are some @emph{optional} packages that you may want to use.  @xref{Dependencies}.  The
-code works with Java 5 or later.
+file.  For use with Android applications, you should download the @code{ormlite-android-@value{ormlite_version}.jar}
+file instead.  ORMLite does not have any required external dependencies although there are some @emph{optional} packages
+that you may want to use.  @xref{Dependencies}.  The code works with Java 5 or later.
 
 @c ----------------------------------------------------------------
 @node Starting Class, Starting DAO, Downloading, Getting Started
@@ -3294,8 +3292,8 @@ it.
 
 @cindex Android basics
 Because of the lack of official support for JDBC in Android OS, ORMLite makes direct calls to the Android database APIs
-to access SQLite databases.  You should make sure that you have downloaded and are depending on the @code{ormlite-core.jar}
-and @code{ormlite-android.jar} files, but @emph{not} the @code{ormlite-jdbc.jar} version.  Although a number of developers
+to access SQLite databases.  You should make sure that you have downloaded and are depending on the
+@code{ormlite-android.jar} files, but @emph{not} the @code{ormlite-jdbc.jar} version.  Although a number of developers
 are using the package in their projects, we continue to improve how ORMLite integrates with the Android classes.
 Feedback on this would be welcome.
 
@@ -4615,7 +4613,6 @@ dependency list.  In this example we are using MySQL but any of the supported JD
 <project>
     @dots{}
     <dependencies>
-        <!-- this has a dependency on ormlite-core -->
         <dependency>
             <groupId>com.j256.ormlite</groupId>
             <artifactId>ormlite-jdbc</artifactId>
@@ -4631,9 +4628,6 @@ dependency list.  In this example we are using MySQL but any of the supported JD
     </dependencies>
 </project>
 @end example
-
-The @code{-jdbc} artifact mentioned in the example depends on the @code{-core} artifact, but that should be pulled
-in automatically by maven.
 
 @emph{NOTE:} I do not have any details about how to configure Android projects with maven.  If you are doing so
 then just replace the @code{ormlite-jdbc} artifact name with @code{ormlite-android}.
@@ -4770,6 +4764,9 @@ and rarely the on-disk database formats.
 @c ----------------------------------------------------------------
 @node 6.0, 5.7, How to Upgrade, How to Upgrade
 @section Notes About Version 6.0
+
+ORMLite has [finally] moved to a shaded unified jar.  You no longer need to add @code{ormlite-core}
+to your mvn dependencies when you use @code{ormlite-jdbc} or @code{ormlite-android}.
 
 ORMLite now requires Java 7 and no longer supports Java 6.  This allows us to change to using the
 @code{AutoCloseable} interface added in Java 7 which means that a number of the different close
